src/tests/fixtures/field_values/DuplicateFields.ts.expected
-----------------
INPUT
----------------- 
// @ts-nocheck

/** @GQLType */
export default class Query {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
  /** @GQLField */
  hello(): Array<string> {
    return ["Hello world!"];
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/DuplicateFields.ts:6:3 - error: Field "Query.hello" can only be defined once.

6   hello(): string {
    ~
